Fixes #34129 - HostDetails - UX Review - Spacing

--- a/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
+++ b/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
@@ -9,8 +9,9 @@
 }
 
 .host-details-tab-item {
-  padding: 18px;
+  padding: 16px 24px;
   background: #f0f0f0;
+
   .pf-c-card {
     height: 100%;
   }
@@ -31,5 +32,5 @@
 }
 
 .host-details-header-section .pf-c-alert {
-  margin: 15px 24px;
+  margin: 16px 24px;
 }
